# rvnllm

./: .gitignore  CHAT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  STUFF.md  full_dump.txt  output.txt
.github/workflows/: build-python.yml  build.yaml  ci.yaml  ci.yml  rust.yml  test.yaml
compute/: Cargo.toml  build.rs  build_cuda.rs
compute/src/: lib.rs
compute/src/cpu/ops/: cpu_add.rs  cpu_attention.rs  cpu_gelu.rs  cpu_matmul.rs  cpu_rmsnorm.rs  cpu_softmax.rs
compute/src/cuda/kernel/: matrix_mul.cu
compute/src/cuda/ops/: gpu_matrix_ops.rs
compute/tests/: cpu_attention.rs  cpu_kernel_ops_tests.rs  cuda_kernel_ops_tests.rs
crates/rvn-core-diff/: Cargo.toml
crates/rvn-core-diff/src/: lib.rs
crates/rvn-core-info/: Cargo.toml
crates/rvn-core-parser/: Cargo.toml
crates/rvn-core-parser/src/: lib.rs  types.rs
crates/rvn-core-tensor/: Cargo.toml
crates/rvn-core-tensor/src/: lib.rs
crates/rvn-globals/: Cargo.toml
crates/rvn-globals/src/: lib.rs  types.rs
ctensor/: Cargo.toml
ctensor/src/: lib.rs  tensor_view.rs
extras/: inspect.py
parsers/: Cargo.toml
parsers/src/: lib.rs  tensor.rs  types.rs
py/rvn_py/: Cargo.toml  README.md  pyproject.toml
py/rvn_py/src/: lib.rs
rvn/: Cargo.toml
rvn/src/: cli.rs  commands.rs  main.rs
rvn/src/commands/: dispatch.rs  info.rs  list.rs  truncate.rs
rvnllm/: Cargo.toml
rvnllm/src/: __main.rs  cli_commands.rs  lib.rs  main.rs  parser.rs
rvnllm/src/commands/: list.rs
tools/rvn-diff/: Cargo.toml
tools/rvn-diff/src/: cli.rs  main.rs
tools/rvn-info/: Cargo.toml
tools/rvn-info/src/: cli.rs  main.rs
tools/rvn-inspect/: Cargo.toml
utils/gguf_loader/: Cargo.toml
utils/gguf_loader/src/: main.rs  types.rs
