[workspace]
members = [ 
    "compute", 
    "ctensor", "rvn",
    "rvnllm",
    "utils/gguf_loader",
]

resolver = "3"

[workspace.package]
version = "0.0.1"
authors = ["Ervin Bosenbacher <ervin.bosenbacher@rvnllm.com>"]
edition = "2024"
homepage = "https://www.rvnllm.com/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rvnllm/rvnllm"

[workspace.dependencies]
clap = { version = "4.5.37", features = ["derive"] }
anyhow = "1.0.98"
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = "0.3.19"
memmap2 = "0.9.5"
byteorder = "1.5"
once_cell = "1.21.3"
rayon = "1.10.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
bytemuck = "1.23"

[profile.mindebug-dev]
inherits = "dev"

[profile.release]
lto = "thin"

[profile.nodebug-release]
inherits = "release"
debug = false

[profile.debug-release]
inherits = "release"
debug = true

[profile.dist-release]
inherits = "release"
codegen-units = 1
debug = false
lto = "fat"
