[package]
name = "compute"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"
links = "llrs_compute"

[lib]
crate-type = ["rlib"]

[features]
default = []
cuda = []

[dependencies]
libc = "0.2.172"
tracing-subscriber = "0.3.18"
ctensor = { path = "../ctensor" }
anyhow = "1.0.98"

[build-dependencies]
cc = "1.2.19"


