[package]
name = "parsers"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
memmap2 = { workspace = true }
once_cell = { workspace = true } 
byteorder = { workspace = true }
#
ctensor = { path = "../ctensor" }

