[package]
name = "rvn"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true } 
serde_json = { workspace = true }
byteorder = { workspace = true }
memmap2 = { workspace = true }
once_cell = { workspace = true }

parsers = { path = "../parsers" }

