[package]
name = "rvn"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
memmap2 = { workspace = true }
byteorder = { workspace = true }
ctensor = { path = "../ctensor" }
compute = { path = "../compute" }
once_cell = "1.21.3"
clap = { workspace = true }
log = "0.4.27"
env_logger = "0.11.8"
bytemuck = "1.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10.0"
