[package]
name = "rvnllm"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
memmap2 = { workspace = true }
byteorder = { workspace = true }
once_cell = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true } 
bytemuck = { workspace = true } 
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
ctensor = { path = "../ctensor" }
compute = { path = "../compute" }
