[package]
name = "rvn-core-diff"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
rvn-core-tensor     = { path = "../../crates/rvn-core-tensor" }
rvn-globals         = { path = "../../crates/rvn-globals" }

