[package]
name = "rvn-core-tensor"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
smallvec = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }

