[package]
name = "rvn-diff"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
rvn-core-parser     = { path = "../../crates/rvn-core-parser" }
rvn-core-tensor     = { path = "../../crates/rvn-core-tensor" }
rvn-core-diff       = { path = "../../crates/rvn-core-diff" }
rvn-globals         = { path = "../../crates/rvn-globals" }

clap                = { workspace = true }
anyhow              = { workspace = true }
env_logger          = { workspace = true } 
log                 = { workspace = true }
tokio               = { workspace = true }
serde_json          = { workspace = true } 
serde               = { workspace = true }
serde_yaml          = { workspace = true }
owo-colors          = { workspace = true }

