[package]
name = "gguf_loader"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
memmap2 = { workspace = true }
byteorder = "1.5"
anyhow = { workspace = true }
log = "0.4.20"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = { version = "1.0.110", features = ["arbitrary_precision"] }
ctensor = { path = "../../ctensor" }

